DOCS-1866 - Fixing texts in feedback

--- a/_templates/search.html
+++ b/_templates/search.html
@@ -240,7 +240,7 @@
                     </select>
                 </p>
                 <p>
-                    <label for="signalfx_splunk_feedback_email">Enter your email address, and someone from the documentation team will respond to you:</label>
+                    <label for="signalfx_splunk_feedback_email">Enter your email address if you would like someone from the documentation team to reply to your question or suggestion.</label>
                 </p>  <p>	<input  name="signalfx_splunk_feedback_email" id="signalfx_splunk_feedback_email" type="text" maxlength="255" size="30" value="" required/>
             </p>
                 <p>
