--- a/_templates/banner.html
+++ b/_templates/banner.html
@@ -20,6 +20,7 @@
 
         .sui-search-box__text-input{
           border-radius: 20px 0 0 20px !important;
+          min-height: 0;
         }
 
         .sui-search-button__label{
