--- a/_templates/banner.html
+++ b/_templates/banner.html
@@ -103,7 +103,7 @@
           <a class="nav-link newnavbar" href="https://www.splunk.com/en_us/training/course-catalog.html?sort=Newest&filters=filterGroup4SplunkObservabilityCloud%2CfilterGroup4SplunkSyntheticMonitoring%2CfilterGroup4SplunkInfrastructureMonitoring%2CfilterGroup4SplunkITSI%2CfilterGroup4SplunkAPM%2CfilterGroup4SplunkOnCall%2CfilterGroup4SplunkRUM%2CfilterGroup4SplunkLogObserver%2CfilterGroup4SplunkInsights" target="_blank">Training</a>
         </li>
         <li class="nav-item nav-lang">
-          <span class="en-lang">EN</span> | <span class="ja-lang">JA</span>
+          <span class="lang" data-lang="en">EN</span> | <span class="lang" data-lang="ja">JA</span>
         </li>
         <li class="nav-item">
           <a class="nav-link newnavbar" href="https://www.splunk.com/en_us/download/infrastructure-monitoring.html" target="_blank" style="
@@ -124,10 +124,11 @@
       <style>
         .nav-lang{
           margin-top: 15px;
+          color:darkgrey;
         }
         .active-lang {
           font-weight: bold;
-          color: white;
+          color: white !important;
         }
       </style>
       <script>
@@ -151,6 +152,7 @@
 
           $('.lang').click(function() {
             var lang = $(this).data('lang');
+            alert(lang);
             var newPath = '/observability/' + lang + '/';
             window.location.pathname = newPath;
 
