--- a/_templates/banner.html
+++ b/_templates/banner.html
@@ -130,6 +130,9 @@
           font-weight: bold;
           color: white !important;
         }
+        .lang{
+          cursor:pointer;
+        }
       </style>
       <script>
         $(document).ready(function() {
