--- a/_templates/banner.html
+++ b/_templates/banner.html
@@ -145,13 +145,12 @@
                   "font-weight": "bold",
                   "color": "red"
                 });
+                updateLinks(lang); // Call updateLinks here to handle specific URL changes.
               } else {
                 $(this).removeClass('active-lang').removeAttr('style');
               }
             });
           }
-
-          setActiveLanguage();
 
           function constructNewPath(lang) {
             var currentPath = window.location.pathname;
@@ -167,6 +166,24 @@
             return pathSegments.join('/');
           }
 
+          function updateLinks(lang) {
+            // Update the navbar-brand href
+            var baseUrl = "https://docs.splunk.com/Observability";
+            if(lang === "ja") {
+              $(".navbar-brand").attr("href", baseUrl + "/ja/");
+            } else {
+              // Default or other languages' behavior
+              $(".navbar-brand").attr("href", baseUrl);
+            }
+
+            var serviceDescUrl = "https://docs.splunk.com/observability";
+            if(lang === "ja") {
+              $("a.nav-link.newnavbar").attr("href", serviceDescUrl + "/ja/get-started/service-description.html");
+            } else {
+              $("a.nav-link.newnavbar").attr("href", serviceDescUrl + "/en/get-started/service-description.html");
+            }
+          }
+
           $('.lang').click(function() {
             var lang = $(this).data('lang');
             var newPath = constructNewPath(lang);
@@ -174,6 +191,8 @@
 
             setActiveLanguage();
           });
+
+          setActiveLanguage();
         });
       </script>
 
