--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -189,12 +189,12 @@
         </div>
       </div>
       <div id="sticky-right-nav">
-        <div class="right-nav" style="margin-top: 0px; position: fixed; display: inline-block; padding-left: 10px; padding-right: 10px; overflow: scroll;word-break: break-word; height: calc(100% - 100px); margin-bottom: 200px">
+          <div class="right-nav" style="max-width:23%;right:0;margin-top:0px; position: fixed; display: inline-block; padding-left: 10px; padding-right: 10px; overflow: scroll;word-break: break-word; height: calc(100% - 100px); margin-bottom: 200px">
 
-          <ul id="rightSideTOC" class="list-unstyled" style="margin-bottom: 150px;">
+              <ul id="rightSideTOC" class="list-unstyled" style="margin-bottom: 150px;">
 
-          </ul>
-        </div>
+              </ul>
+          </div>
       </div>
 {%- endblock %}
  <div id="mainTOC">
