--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -150,7 +150,7 @@
       <h2 style="font-size:21px;font-family: 'Open Sans'; font-weight: bold;">Was this topic useful?</h2>
          <div class="admonition note">
          <p class="admonition-title"></p>
-         Did you know that you can update the documentation to fix typos, add examples, or document new settings? <a href="https://docs.splunk.com/Observability/get-started/contribute.html">Learn how!</a>
+         Did you know that you can edit this page? <a href="https://docs.splunk.com/Observability/get-started/contribute.html">Learn how!</a>
          </div>
           <p>
                                   Was this documentation topic helpful?
@@ -191,7 +191,7 @@
           <em>Feedback submitted, thanks!</em>
           <div class="admonition note">
             <p class="admonition-title"></p>
-            Did you know that you can update the documentation to fix typos, add examples, or document new settings? <a href="https://docs.splunk.com/Observability/get-started/contribute.html">Learn how!</a>
+            Did you know that you can edit this page? <a href="https://docs.splunk.com/Observability/get-started/contribute.html">Learn how!</a>
             </div>
          </div>
         </div>
