--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -113,7 +113,6 @@
     }
 </script>
 {% endblock %}
-
 {%- block content %}
   <div class="">
   {% include "banner.html" %}
@@ -128,6 +127,7 @@
           <div class="body" role="main">
             {% include "breadcrumbs.html" %}
             {% block body %} {% endblock %}
+            <p class="timestamp">{%- if gitstamp %} This page was last updated on {{ gitstamp }}. {%- endif %}</p>
             {% include "page-nav.html" %}
           </div>
       {%- if render_sidebar %}
