--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -127,7 +127,9 @@
           <div class="body" role="main">
             {% include "breadcrumbs.html" %}
             {% block body %} {% endblock %}
-            <p class="timestamp" style="margin-top: 60px; font-size: 12px;">{%- if gitstamp %} This page was last updated on {{ gitstamp }}. {%- endif %}</p>
+            {%- if last_updated %}
+            <p class="timestamp" style="margin-top: 60px; font-size: 12px;">{% trans last_updated=last_updated|e %}This page was last updated on {{ last_updated }}.{% endtrans %}</p>
+            {%- endif %}
             {% include "page-nav.html" %}
           </div>
       {%- if render_sidebar %}
