--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -206,8 +206,8 @@
       <a href="https://www.splunk.com/en_us/legal/privacy/privacy-policy.html" target="_blank">Privacy</a> | 
       <a href="https://www.splunk.com/en_us/legal/terms/terms-of-use.html" target="_blank">Terms</a> | 
       <a href="https://www.splunk.com/en_us/legal/export-controls.html" target="_blank">Export Control</a> | 
-      <span style="color:black">&copy; 2005 - 2023 Splunk Inc. All rights reserved.</span>
-      <div class="newfootertxt" style="color:black">Splunk, Splunk>, Turn Data Into Doing, and Data-to-Everything are trademarks or registered trademarks of Splunk Inc. in the United States and other countries. All other brand names, product names, or trademarks belong to their respective owners.</div>
+      <span style="color:black">&copy; 2005 - 2023 Splunk LLC All rights reserved.</span>
+      <div class="newfootertxt" style="color:black">Splunk, Splunk>, Turn Data Into Doing, and Data-to-Everything are trademarks or registered trademarks of Splunk LLC in the United States and other countries. All other brand names, product names, or trademarks belong to their respective owners.</div>
       </div>
       <div style="width: 28%;">
         <a href="#feedbackModal" class="feedbackbtn">Feedback</a>
